--- a/open-vm-tools-vmware-user.desktop
+++ b/open-vm-tools-vmware-user.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Encoding=UTF-8
-Exec=vmare-user
+Exec=vmware-user-suid-wrapper
+Type=Application
 Name=VMware User Agent
 X-KDE-autostart-phase=1
 NoDisplay=true
